consistent embeds